oxiplate-derive/tests/broken/if/if-let-unit-struct-without-expression.stderr
error: Expected `=`
 --> tests/broken/if/if-let-unit-struct-without-expression.rs:6:17
  |
6 | {%- if let None -%}
  |                 ^^^
